feat: namespace tab
